grammar.js
    source_file: $ => optional($._statements),

    _statements: $ => seq(
      repeat($._terminator),
      $.statement,
      repeat(seq($._terminator, optional($.statement))),
    ),

    // Body block used inside class/module/method/etc definitions
    _body: $ => seq(
      $._terminator,
      optional($._statements),
    ),

    assignment: $ => prec.right(PREC.ASSIGN, seq(
      $.assignment_target,
      '=',
      $.expression,
    )),

    assignment_target: $ => choice(
      $.identifier,
      $.instance_variable,
      $.class_variable,
      $.global_variable,
      $.constant,
      $.index_expression,
      $.dot_expression,
    ),

    binary_expression: $ => {
      const table = [
        [PREC.OR, '||'],
        [PREC.AND, '&&'],
        [PREC.COMPARE, choice('==', '!=', '<', '>', '<=', '>=', '<=>', '===', '=~', '!~')],
        [PREC.BIT_OR, '|'],
        [PREC.BIT_XOR, '^'],
        [PREC.BIT_AND, '&'],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADD, choice('+', '-', '&+', '&-')],
        [PREC.MULTIPLY, choice('*', '/', '//', '%', '&*')],
        [PREC.POWER, choice('**', '&**')],
      ];

      return choice(
        ...table.map(([prec_val, op]) =>
          prec.left(/** @type {number} */ (prec_val), seq(
            field('left', $.expression),
            field('operator', /** @type {any} */ (op)),
            field('right', $.expression),
          ))
        ),
      );
    },

    conditional_expression: $ => prec.right(PREC.CONDITIONAL, seq(
      field('condition', $.expression),
      '?',
      field('consequence', $.expression),
      ':',
      field('alternative', $.expression),
    )),

    call: $ => prec.left(PREC.CALL, choice(
      // method(args)
      seq(
        field('method', $._method_name),
        field('arguments', $.argument_list),
        optional($.block),
      ),
      // method args (no parens)
      seq(
        field('method', $._method_name),
        field('arguments', $.argument_list_no_parens),
        optional($.block),
      ),
      // method { block }
      seq(
        field('method', $._method_name),
        $.block,
      ),
    )),

    dot_expression: $ => prec.left(PREC.DOT, seq(
      field('receiver', $.expression),
      choice('.', '&.'),
      field('method', choice($._method_name, $.constant)),
      optional(field('arguments', $.argument_list)),
      optional($.block),
    )),

    index_expression: $ => prec.left(PREC.INDEX, seq(
      field('receiver', $.expression),
      '[',
      commaSep($.expression),
      ']',
      optional('?'),
    )),

    argument_list: $ => seq(
      '(',
      commaSep($.argument),
      ')',
    ),

    argument_list_no_parens: $ => prec.left(-1, seq(
      $.argument,
      repeat(seq(',', $.argument)),
    )),

    argument: $ => choice(
      $.expression,
      $.named_argument,
      $.splat_argument,
      $.double_splat_argument,
      $.block_argument,
      $.out_argument,
    ),

    named_argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $.expression),
    ),

    block: $ => choice(
      seq(
        'do',
        optional($.block_params),
        optional($._statements),
        'end',
      ),
      seq(
        '{',
        optional($.block_params),
        optional($._statements),
        '}',
      ),
    ),

    block_params: $ => seq(
      '|',
      commaSep1($.block_param),
      '|',
    ),

    block_param: $ => seq(
      $.identifier,
      optional(seq(':', $.type)),
    ),

    // =========================================================================
    // CONTROL FLOW
    // =========================================================================
    return_statement: $ => prec.left(seq('return', optional($.expression))),

    yield_expression: $ => prec.left(seq('yield', optional(choice(
      $.argument_list,
      $.expression,
    )))),

    // =========================================================================
    // TYPE DEFINITIONS
    // =========================================================================
    class_def: $ => seq(
      optional('abstract'),
      'class',
      field('name', $.type_name),
      optional(seq('<', field('superclass', $.type))),
      optional($._body),
      'end',
    ),

    method_def: $ => seq(
      'def',
      choice(
        field('name', $._def_name),
        seq('self', '.', field('name', $._def_name)),
      ),
      optional($.method_params),
      optional(seq(':', field('return_type', $.type))),
      optional(seq('forall', commaSep1($.constant))),
      optional($._body),
      'end',
    ),

    _def_name: $ => choice(
      $._method_name,
      $.setter_method_name,
      $.operator_method_def,
    ),

    method_params: $ => seq(
      '(',
      commaSep($.param),
      ')',
    ),

    param: $ => choice(
      $._simple_param,
      $.splat_param,
      $.double_splat_param,
      $.block_param_def,
    ),

    _simple_param: $ => seq(
      field('name', choice($.identifier, $.instance_variable)),
      optional(seq(':', field('type', $.type))),
      optional(seq('=', field('default', $.expression))),
    ),

    block_param_def: $ => seq('&', optional(choice(
      seq($.identifier, optional(seq(':', $.type))),
      seq(':', $.type),  // anonymous block with type: & : IO ->
    ))),

    // =========================================================================
    // MACRO DEFINITIONS
    // =========================================================================
    visibility_modifier: $ => seq(
      choice('private', 'protected'),
      choice($.method_def, $.class_def, $.struct_def, $.module_def, $.enum_def, $.constant, $.call, $.assignment, $.type_declaration),
    ),

    // =========================================================================
    // LIB / C BINDINGS
    // =========================================================================
    type: $ => choice(
      $.constant,
      $.generic_type,
      $.union_type,
      $.nilable_type,
      $.pointer_type,
      $.static_array_type,
      $.proc_type,
      $.tuple_type,
      $.named_tuple_type,
      $.self_type,
      $.typeof_type,
      $.underscore_type,
      $.scoped_type,
    ),

    // Type name used in class/module/struct definitions — allows Foo, Foo(T), Foo::Bar, Foo::Bar(T)
    type_name: $ => prec(1, choice(
      $.constant,
      $.generic_type_def,
      $.scoped_type_name,
    )),

    // Scoped type name for definitions: Foo::Bar, Foo::Bar::Baz, Foo::Bar(T)
    _type_identifier: $ => choice(
      $.constant,
      $.scoped_type_name,
    ),

    generic_type: $ => prec(1, seq(
      choice($.constant, $.scoped_constant),
      '(',
      commaSep1($.type),
      ')',
    )),

    union_type: $ => prec.left(1, seq($.type, '|', $.type)),

    nilable_type: $ => prec(2, seq($.type, '?')),

    pointer_type: $ => prec(2, seq($.type, '*')),

    static_array_type: $ => seq(
      'StaticArray',
      '(',
      $.type,
      ',',
      $.integer_literal,
      ')',
    ),

    proc_type: $ => prec.right(choice(
      // Canonical form: Proc(Int32, String)
      seq(
        'Proc',
        '(',
        commaSep($.type),
        ')',
      ),
      // Arrow form: Int32 -> String, -> Nil
      // Single arg doesn't need parens, multi-arg uses parens
      seq($.type, '->', optional($.type)),
      // No-arg arrow form: -> Nil, ->
      seq('->', optional($.type)),
    )),

    tuple_type: $ => seq('{', commaSep1($.type), '}'),

    named_tuple_type: $ => seq(
      'NamedTuple',
      '(',
      commaSep1(seq($.identifier, ':', $.type)),
      ')',
    ),

    scoped_type: $ => prec(3, seq(choice($.constant, $.scoped_constant), '::', $.type)),

    // =========================================================================
    // ALIAS
    // =========================================================================
    alias_statement: $ => seq('alias', $._type_identifier, '=', $.type),

    // Type declaration: x : Int32, x : Int32 = 42
    type_declaration: $ => prec.right(PREC.ASSIGN, seq(
      field('name', choice($.identifier, $.instance_variable, $.class_variable)),
      ':',
      field('type', $.type),
      optional(seq('=', field('value', $.expression))),
    )),

    // =========================================================================
    // SPECIAL EXPRESSIONS
    // =========================================================================
    spawn_expression: $ => seq(
      'spawn',
      $.block,
    ),

    typeof_expression: $ => seq('typeof', '(', commaSep1($.expression), ')'),

    sizeof_expression: $ => seq('sizeof', '(', $.type, ')'),

    instance_sizeof_expression: $ => seq('instance_sizeof', '(', $.type, ')'),

    pointerof_expression: $ => seq('pointerof', '(', $.expression, ')'),

    offsetof_expression: $ => seq('offsetof', '(', $.type, ',', $.identifier, ')'),

    is_a_expression: $ => prec(PREC.COMPARE, seq(
      $.expression,
      '.is_a?',
      '(',
      $.type,
      ')',
    )),

    as_expression: $ => prec(PREC.COMPARE, seq(
      $.expression,
      '.as',
      '(',
      $.type,
      ')',
    )),

    as_question_expression: $ => prec(PREC.COMPARE, seq(
      $.expression,
      '.as?',
      '(',
      $.type,
      ')',
    )),

    responds_to_expression: $ => prec(PREC.COMPARE, seq(
      $.expression,
      '.responds_to?',
      '(',
      $.symbol_literal,
      ')',
    )),

    nil_question_expression: $ => prec(PREC.DOT, seq(
      $.expression,
      '.nil?',
    )),

    // =========================================================================
    // PRIMARY EXPRESSIONS (LITERALS, VARIABLES)
    // =========================================================================
    primary: $ => choice(
      $.literal,
      $.identifier,
      $.method_identifier,
      $.instance_variable,
      $.class_variable,
      $.global_variable,
      $.constant,
      $.scoped_constant,
      $.generic_instance,
      $.parenthesized_expression,
      $.self,
      $.proc_literal,
    ),

    // Scoped constant access: Foo::Bar, Foo::Bar::Baz
    scoped_constant: $ => prec.left(PREC.SCOPE, seq(
      choice($.constant, $.scoped_constant),
      '::',
      $.constant,
    )),

    // Generic type used as expression: Array(Int32), Hash(String, Int32), Foo::Bar(Int32)
    generic_instance: $ => prec(PREC.CALL, seq(
      choice($.constant, $.scoped_constant),
      '(',
      commaSep1($.type),
      ')',
    )),

    parenthesized_expression: $ => seq('(', $.expression, ')'),
    self: $ => 'self',

    // =========================================================================
    // METHOD NAMES
    // =========================================================================
    // Method name: identifier or identifier with ? or ! suffix
    _method_name: $ => choice($.identifier, $.method_identifier),

    // Methods with ? or ! suffix: empty?, valid?, save!
    nil_literal: $ => 'nil',

    integer_literal: $ => token(choice(
      // Decimal with optional type suffix (i8, i16, i32, i64, i128, u8, u16, u32, u64, u128)
      seq(optional('-'), /[0-9][0-9_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Hex
      seq(optional('-'), /0x[0-9a-fA-F][0-9a-fA-F_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Octal
      seq(optional('-'), /0o[0-7][0-7_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Binary
      seq(optional('-'), /0b[01][01_]*/, optional(/[iu](8|16|32|64|128)/)),
    )),

    string_literal: $ => seq(
      $._string_start,
      repeat(choice(
        $.string_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      $._string_end,
    ),

    string_interpolation: $ => seq(
      $.interpolation_start,
      $._statements,
      $.interpolation_end,
    ),

    escape_sequence: $ => token.immediate(choice(
      /\\[\\'"abefnrtv0]/,
      /\\x[0-9a-fA-F]{2}/,
      /\\u[0-9a-fA-F]{4}/,
      /\\u\{[0-9a-fA-F]+\}/,
      /\\[0-7]{1,3}/,
      /\\./,
    )),

    // Heredoc literal
    heredoc_literal: $ => seq(
      $._heredoc_start,
      repeat(choice(
        $.heredoc_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      $._heredoc_end,
    ),

    // Percent literals (%w, %i, %q, %Q, %r, %x, %())
    percent_literal: $ => seq(
      $._percent_literal_start,
      repeat(choice(
        $.percent_literal_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      $._percent_literal_end,
      optional($.regex_flags), // For %r() literals
    ),

    // Regex with external scanner for disambiguation
    regex_literal: $ => seq(
      $._regex_start,
      repeat(choice(
        $.regex_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      $._regex_end,
      optional($.regex_flags),
    ),

    regex_flags: $ => token.immediate(/[imx]+/),

    // Command literal with interpolation
    command_literal: $ => seq(
      $._command_start,
      repeat(choice(
        $.command_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      $._command_end,
    ),

    symbol_literal: $ => choice(
      seq(':', token.immediate(IDENTIFIER)),
      seq(':', token.immediate(METHOD_IDENTIFIER)),
      seq(':', token.immediate(SETTER_IDENTIFIER)),
      seq(':', token.immediate(CONSTANT)),
      seq(':"', /[^"]+/, '"'),
    ),

    // =========================================================================
    // COLLECTION LITERALS
    // =========================================================================
    array_literal: $ => seq(
      '[',
      commaSep($.expression),
      optional(','),
      ']',
      optional(seq('of', $.type)),
    ),

    identifier: $ => IDENTIFIER,

    instance_variable: $ => seq('@', token.immediate(IDENTIFIER)),

    constant: $ => CONSTANT,

    // =========================================================================
    // COMMENT
    // =========================================================================
