test/corpus/special_expressions.txt
================================================================================
typeof expression
================================================================================

typeof(x)

--------------------------------------------------------------------------------

(source_file
  (typeof_expression
    (primary
      (identifier))))

================================================================================
sizeof expression
================================================================================

sizeof(Int32)

--------------------------------------------------------------------------------

(source_file
  (sizeof_expression
    (type
      (constant))))

================================================================================
instance_sizeof expression
================================================================================

instance_sizeof(String)

--------------------------------------------------------------------------------

(source_file
  (instance_sizeof_expression
    (type
      (constant))))

================================================================================
pointerof expression
================================================================================

pointerof(x)

--------------------------------------------------------------------------------

(source_file
  (pointerof_expression
    (primary
      (identifier))))

================================================================================
offsetof expression
================================================================================

offsetof(Foo, bar)

--------------------------------------------------------------------------------

(source_file
  (offsetof_expression
    (type
      (constant))
    (identifier)))

================================================================================
is_a? expression
================================================================================

x.is_a?(Int32)

--------------------------------------------------------------------------------

(source_file
  (is_a_expression
    (primary
      (identifier))
    (type
      (constant))))

================================================================================
as expression
================================================================================

x.as(String)

--------------------------------------------------------------------------------

(source_file
  (as_expression
    (primary
      (identifier))
    (type
      (constant))))

================================================================================
as? expression
================================================================================

x.as?(String)

--------------------------------------------------------------------------------

(source_file
  (as_question_expression
    (primary
      (identifier))
    (type
      (constant))))

================================================================================
responds_to? expression
================================================================================

x.responds_to?(:to_s)

--------------------------------------------------------------------------------

(source_file
  (responds_to_expression
    (primary
      (identifier))
    (symbol_literal)))

================================================================================
nil? expression
================================================================================

x.nil?

--------------------------------------------------------------------------------

(source_file
  (nil_question_expression
    (primary
      (identifier))))

================================================================================
Index expression on array
================================================================================

[1, 2][0]

--------------------------------------------------------------------------------

(source_file
  (index_expression
    receiver: (primary
      (array_literal
        (primary
          (integer_literal))
        (primary
          (integer_literal))))
    (primary
      (integer_literal))))

================================================================================
Named argument in method call
================================================================================

method(name: "value")

--------------------------------------------------------------------------------

(source_file
  (call
    method: (identifier)
    arguments: (argument_list
      (argument
        (named_argument
          name: (identifier)
          value: (primary
            (string_literal
              (string_content))))))))

================================================================================
Spawn expression
================================================================================

spawn do
  work
end

--------------------------------------------------------------------------------

(source_file
  (spawn_expression
    (block
      (primary
        (identifier)))))
