test/corpus/types.txt
================================================================================
Union type declaration
================================================================================

x : String | Int32

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (identifier)
    type: (type
      (union_type
        (type
          (constant))
        (type
          (constant))))))

================================================================================
Nilable type declaration
================================================================================

x : String?

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (identifier)
    type: (type
      (nilable_type
        (type
          (constant))))))

================================================================================
Proc type in method parameter
================================================================================

def foo(x : Proc(Int32, String))
end

--------------------------------------------------------------------------------

(source_file
  (method_def
    name: (identifier)
    (method_params
      (param
        name: (identifier)
        type: (type
          (proc_type
            (type
              (constant))
            (type
              (constant))))))))

================================================================================
Alias statement
================================================================================

alias MyString = String

--------------------------------------------------------------------------------

(source_file
  (alias_statement
    (constant)
    (type
      (constant))))

================================================================================
Scoped type
================================================================================

x : IO::Error

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (identifier)
    type: (type
      (scoped_type
        (constant)
        (type
          (constant))))))

================================================================================
Generic type in declaration
================================================================================

x : Array(Int32)

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (identifier)
    type: (type
      (generic_type
        (constant)
        (type
          (constant))))))

================================================================================
Pointer type in method parameter
================================================================================

def foo(ptr : UInt8*)
end

--------------------------------------------------------------------------------

(source_file
  (method_def
    name: (identifier)
    (method_params
      (param
        name: (identifier)
        type: (type
          (pointer_type
            (type
              (constant))))))))

================================================================================
Static array type
================================================================================

def foo(arr : StaticArray(Int32, 10))
end

--------------------------------------------------------------------------------

(source_file
  (method_def
    name: (identifier)
    (method_params
      (param
        name: (identifier)
        type: (type
          (static_array_type
            (type
              (constant))
            (integer_literal)))))))

================================================================================
Tuple type in declaration
================================================================================

x : {Int32, String}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (identifier)
    type: (type
      (tuple_type
        (type
          (constant))
        (type
          (constant))))))

================================================================================
Named tuple type in declaration
================================================================================

x : NamedTuple(name: String, age: Int32)

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (identifier)
    type: (type
      (named_tuple_type
        (identifier)
        (type
          (constant))
        (identifier)
        (type
          (constant))))))
